DuPont DevSB/src/objects/ccrz__L_Exception__c.object
<CustomObject>
    <description>This custom object stores the technical exceptions created by the source application</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <description>Defines the exception category. &quot;Business&quot; and &quot;Technical&quot; are the current defined categories.</description>
        <label>Category</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DMLFieldNames__c</fullName>
        <label>DMLFieldNames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Exception_Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who created the exception</description>
        <label>Exception Originator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G2WExceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Function_Point__c</fullName>
        <description>Describes the function point in the code that caused the exception</description>
        <label>Function Point</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Generated_ApexMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to signify, if the exception framework read the user friendly message.</description>
        <label>Generated ApexMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Line_Number__c</fullName>
        <description>Stores the line number where the exception occurred</description>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Message__c</fullName>
        <description>Stores the complete stack trace of the exception.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NotifyEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to indicate whether the exception needs to be notified by email with details</description>
        <label>NotifyEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__OrgId__c</fullName>
        <description>Store the orgId of the org generating the error</description>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Page_Severity__c</fullName>
        <description>List the page severity of the apex message to be displayed to the end user.</description>
        <label>Page Severity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Profile_Name__c</fullName>
        <description>Stores the profile name associated with the exception originator</description>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Show_EndUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that say whether the message is shown to the end user in the user interface</description>
        <label>Show EndUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>Stores the exception type. DMLException, GovernorLimit exception are examples</description>
        <label>Type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Friendly_Message__c</fullName>
        <description>If the exception needs to be propagated to the UI, what is the message to be displayed to the end user.</description>
        <label>User Friendly Message</label>
        <type>TextArea</type>
    </fields>
    <label>L_Exception</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L_Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ccrz__Exception_Message_Required</fullName>
        <active>true</active>
        <description>The exception message with details is required</description>
        <errorConditionFormula>OR(
       ISBLANK( ccrz__Message__c ) 
    , ISNULL(ccrz__Message__c )
)</errorConditionFormula>
        <errorDisplayField>ccrz__Message__c</errorDisplayField>
        <errorMessage>Exception Message is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccrz__PageSeverityReq_UserMessage</fullName>
        <active>true</active>
        <description>Page severity needs to be defined for every user message</description>
        <errorConditionFormula>AND (
    ccrz__Show_EndUser__c 
 ,  OR
          (  ISBLANK(ccrz__Page_Severity__c)
            , ISNULL(ccrz__Page_Severity__c)
          )
)</errorConditionFormula>
        <errorDisplayField>ccrz__Page_Severity__c</errorDisplayField>
        <errorMessage>Page Severity is required when show end user flag is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccrz__UserFriendlyMessageReq_UI_Errors</fullName>
        <active>true</active>
        <description>A user friendly message is required, when the message needs to be displayed in the UI</description>
        <errorConditionFormula>AND ( ccrz__Show_EndUser__c , 
            OR (
                      ISBLANK( ccrz__User_Friendly_Message__c )
                    , ISNULL( ccrz__User_Friendly_Message__c )
                 )
   )</errorConditionFormula>
        <errorDisplayField>ccrz__User_Friendly_Message__c</errorDisplayField>
        <errorMessage>User friendly message is required, if show end user flag is set to true</errorMessage>
    </validationRules>
</CustomObject>